# workos-rust

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml  package-lock.json  package.json
.github/: renovate.json
.github/workflows/: ci.yml  release.yml
src/: admin_portal.rs  core.rs  directory_sync.rs  events.rs  lib.rs  mfa.rs  organizations.rs  passwordless.rs  roles.rs  sso.rs  user_management.rs  workos.rs
src/admin_portal/operations/: generate_portal_link.rs
src/core/: error.rs  response.rs  traits.rs
src/core/types/: api_key.rs  metadata.rs  pagination_params.rs  raw_attributes.rs  url_encodable_vec.rs
src/directory_sync/operations/: delete_directory.rs  get_directory.rs  get_directory_group.rs  get_directory_user.rs  list_directories.rs  list_directory_groups.rs  list_directory_users.rs
src/directory_sync/types/: directory.rs  directory_group.rs  directory_user.rs
src/events/: operations.rs  types.rs
src/events/operations/: list_events.rs
src/events/types/: event.rs  events.rs
src/mfa/operations/: challenge_factor.rs  enroll_factor.rs  verify_challenge.rs
src/mfa/types/: authentication_factor.rs
src/organizations/: operations.rs  types.rs
src/organizations/operations/: create_organization.rs  delete_organization.rs  get_organization.rs  get_organization_by_external_id.rs  list_organizations.rs  update_organization.rs
src/organizations/types/: organization.rs  organization_domain.rs
src/passwordless/operations/: create_passwordless_session.rs  send_passwordless_session.rs
src/roles/types/: role.rs
src/sso/: types.rs
src/sso/operations/: delete_connection.rs  get_authorization_url.rs  get_connection.rs  get_profile.rs  get_profile_and_token.rs  list_connections.rs
src/sso/types/: authorization_code.rs  connection.rs  saml_certificate.rs
src/user_management/: operations.rs  types.rs
src/user_management/operations/: accept_invitation.rs  authenticate_with_code.rs  authenticate_with_email_verification.rs  authenticate_with_magic_auth.rs  authenticate_with_password.rs  authenticate_with_refresh_token.rs  authenticate_with_totp.rs  create_magic_auth.rs  create_organization_membership.rs  create_password_reset.rs  create_user.rs  deactivate_organization_membership.rs  delete_organization_membership.rs  delete_user.rs  enroll_auth_factor.rs  find_invitation_by_token.rs  get_authorization_url.rs  get_email_verification.rs  get_invitation.rs  get_invitation_by_token.rs  get_jwks.rs  get_jwks_url.rs  get_logout_url.rs  get_magic_auth.rs  get_organization_membership.rs  get_password_reset.rs  get_user.rs  get_user_by_external_id.rs  get_user_identities.rs  list_auth_factors.rs  list_invitations.rs  list_organization_memberships.rs  list_users.rs  reactivate_organization_membership.rs  reset_password.rs  revoke_invitation.rs  send_invitation.rs  update_organization_membership.rs  update_user.rs
src/user_management/types/: client_secret.rs  (+16 more)
(+64 files in other folders)
