[package]
name = "workos"
version = "0.2.0"
description = "Rust SDK for interacting with the WorkOS API."
repository = "https://github.com/hypervideo/workos-rust"
authors = ["Hyper <info@hyper.video>", "WorkOS"]
license = "MIT"
edition = "2021"

[features]
default = ["rustls-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
async-trait = "0.1.88"
chrono = { version = "0.4.40", features = ["serde"] }
querystring = "1.1.0"
reqwest = { version = "0.11.27", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "1.0.69"
url = "2.5.4"

[dev-dependencies]
matches = "0.1.10"
mockito = "0.31.1"
tokio = { version = "1.44.2", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
