[package]
name = "workos-sdk"
version = "0.3.0"
description = "Rust SDK for interacting with the WorkOS API."
repository = "https://github.com/hypervideo/workos-rust"
authors = ["Hyper <info@hyper.video>", "WorkOS"]
license = "MIT"
edition = "2024"

[features]
default = ["rustls-tls"]
reqwest=["dep:reqwest"]
native-tls = ["reqwest/native-tls","reqwest"]
rustls-tls = ["reqwest/rustls-tls","reqwest"]

[dependencies]
async-trait = "0.1.88"
chrono = { version = "0.4.40", features = ["serde"] }
derive_more = { version = "2.0.1", features = ["deref", "display", "from"] }
erased-serde = "0.4.6"
http = "1.3.1"
jsonwebtoken = "9.3.1"
querystring = "1.1.0"
reqwest = { version = "0.12.0", features = ["json"], optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.0"
url = { version = "2.5.4", features = ["serde"] }

[dev-dependencies]
matches = "0.1.10"
mockito = "1.0.0"
tokio = { version = "1.44.2", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
